--- a/vue-cdn/index.html
+++ b/vue-cdn/index.html
@@ -7,7 +7,19 @@
   <title>Document</title>
 </head>
 <body>
+
+  <div id="app">
+    {{message}}
+  </div>
   
-  <script src="https://cdn.jsdeliver.net/npm/vew@2.5.13/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script>
+    var vue = new Vue({
+      el: '#app',
+      data: {
+        message: 'Hello Vue'
+      }
+    })
+  </script>
 </body>
 </html>
